fix: added font-size clamp to fix title overflow

--- a/src/sections/projects/projects.module.scss
+++ b/src/sections/projects/projects.module.scss
@@ -23,7 +23,8 @@
         }
 
         .header__heading {
-            font-size: xx-large;
+            font-size: clamp(1.5rem, 2vw, 2.5rem);
+            margin-bottom: 0.5rem;
             white-space: nowrap;
         }
     }
